Задание 1 ЛР 5, исправления в ЛР 3, 4

--- a/labs/lab04/index.html
+++ b/labs/lab04/index.html
@@ -57,7 +57,7 @@
     
     <p class="section">Задание 2</p>
 
-    <p>Добавьте в компонент <mark>Calendar</mark>, созданный в предыдущей лабораторной работе, возможность выбирать дни при помощи клика мыши. Выбранные пользователем дни храните в <mark>Calendar</mark>. Выделите выбранные дни цветом.</p>
+    <p>Добавьте в компонент <mark>Calendar</mark>, созданный в предыдущем задании, возможность выбирать дни при помощи клика мыши. Выбранные пользователем дни храните как состояние в <mark>Calendar</mark>. Выделите выбранные дни цветом.</p>
 
     </div>
     <div class="site-nav">
