--- a/labs/lab05/index.html
+++ b/labs/lab05/index.html
@@ -47,10 +47,18 @@
     <div class="general">
 
     <div class="content">
-    <p class="section">Лабораторная работа №5</p>
-    
-    <p class="section">Задание 1</p>
-
+        <p class="section">Лабораторная работа №5</p>
+        <p class="lr-theme">Темы: <a target="_blank" href="../../examples/quick-start/forms/index.html">Формы</a></p>
+        <p class="section">Задание 1</p>
+        <p>Создайте компонент <mark>SignUpForm</mark>, позволяющий ввести данные для регистрации пользователя на сайте. В форме должна быть возможность указать:</p>
+        <ul>
+            <li>Адрес электронной почты при помощи отдельного компонента <mark>SignUpEmailInput</mark>, автоматически проверяющего корректность введённого адреса. Если адрес некорректен, кнопка отправки формы блокируется.</li>
+            <li>Пароль  с помощью компонента <mark>SignUpPasswordInput</mark>, содержащего два текстовых поля: для ввода пароля и для подтверждения пароля. Если пароли в этих полях не совпадают, должно появляться соответствующее сообщение, кнопка отправки формы должна блокироваться. Компонент также должен говорить, насколько введённый пароль безопасен, в зависимости от наличия в нём цифр, букв верхнего и нижнего регистра, специальных символов.</li>
+            <li>Фамилию, имя, отчество в простых текстовых полях.</li>
+            <li>Пол при помощи радиокнопок.</li>
+            <li>Дату рождения при помощи выпадающих списков.</li>
+            <li>Номер телефона при помощи компонента <mark>PhoneInput</mark>, разработанного в лабораторной работе №3.</li>
+        </ul>
     </div>
 <div class="site-nav">
     <div class="site-nav-scroll">
