фикс отображения пункта в содержании

--- a/examples/advanced/context/index.html
+++ b/examples/advanced/context/index.html
@@ -172,7 +172,7 @@
                 <li><a href="../../advanced/optimizing-perfomance/index.html">Оптимизация производительности</a></li>
                 <li><a href="../../advanced/react-without-jsx/index.html">React без JSX</a></li>
                 <li><a href="../../advanced/reconciliation/index.html">Согласование</a></li>
-                <li><a href="../../advanced/context/index.html">Контекст</a></li>
+                <li><a href="index.html">Контекст</a></li>
                 <li><a href="../../advanced/fragments/index.html">Фрагменты</a></li>
                 <li><a href="../../advanced/portals/index.html">Порталы</a></li>
                 <li><a href="../../advanced/error-boundaries/index.html">Границы ошибок</a></li>
