--- a/labs/lab02/index.html
+++ b/labs/lab02/index.html
@@ -56,7 +56,7 @@
         <p class="section">Задание 2</p>
         <p>Создайте компонент меню <mark>JobMenu</mark> с полезными ссылками для различных профессий. Реализуйте функционал выбора профессии на ваше усмотрение (список/чекбоксы/радиокнопки).</p>
         <p>Выбор профессии и меню должны быть реализованы отдельными компонентами. В зависимости от выбранной профессии в первом компоненте, должен изменяться компонент меню.</p>
-        <p>Минимальное количество профессий - 5, минимальное количтво пунктов меню - 7.</p>
+        <p>Минимальное количество профессий - 5, минимальное количество пунктов меню - 7.</p>
     </div>
 <div class="site-nav">
     <div class="site-nav-scroll">
