--- a/labs/lab08/index.html
+++ b/labs/lab08/index.html
@@ -50,7 +50,36 @@
 
     <div class="content">
     <p class="section">Лабораторная работа №8</p>
-
+    <p class="lr-theme">Темы: <a target="_blank" href="../../examples/advanced/jsx-in-depth/index.html">JSX подробнее</a>, <a target="_blank" href="../../examples/advanced/uncontrolled-components/index.html">Неконтролируемые компоненты</a></p>
+    <p class="section">Задание 1</p>
+    <p>Разработайте компонент комментариев <mark>Сomments</mark>. Компонент должен содержать следующие поля:</p>
+    <ul>
+        <li>Имя пользователя;</li>
+        <li>Аватар пользователя;</li>
+        <li>Электронная почта (E-mail);</li>
+        <li>Текст сообщения;</li>
+        <li>Секретное слово для удаления.</li>
+    </ul>
+    <p>Реализуйте следующий функционал:</p>
+    <ul>
+        <li>Добавление неограниченного количества комментариев.</li>
+        <li>Возможность изменения комментариев после их публикации.</li>
+        <li>Возможность удаления комментариев с подтверждением по секретному слову. Каждому комментарию должно соответствовать определенное секретное слово.</li>
+        <li>Возможность просмотра информации о комментарии (имя пользователя, дата изменения, электронная почта пользователя).</li>
+    </ul>
+        <p>Каждый опубликованный комментарий должен содержать:</p>
+        <ul>
+            <li>Имя пользователя;</li>
+            <li>Текст сообщения;</li>
+            <li>Функцию изменения;</li>
+            <li>Функцию удаления;</li>
+            <li>Функция просмотра информации.</li>
+        </ul>
+    <p><span class="gatsby-code-text">Выбор аватара пользователя</span> осуществляется с помощью выпадающего списка с названием изображения. После выбора изображения его миниатюра появится ниже выпадающего списка для демонстрации.</p>
+    <p><span class="gatsby-code-text">Функция удаления</span>, компонент <mark>СommentsDel</mark>, должна осуществлять проверку секретного слова на соответствие данному комментарию.</p>
+    <p><span class="gatsby-code-text">Функция изменения</span>, компонент <mark>СommentsEdit</mark>, должна содержать поле для изменения текста сообщения и данные об изменяемом комментарии. Поле "Дата изменения" должно изменить свое значение после редактирования комментария. Другие поля уже опубликованного комментария должны быть неизменны.</p>
+    <p><span class="gatsby-code-text">Функция просмотра информации о комментарии</span>, компонент <mark>СommentsInfo</mark>, должна выводить уведомление со всей необходимой информацией (имя пользователя, дата изменения, электронная почта пользователя) ниже комментария, информация по которому была запрошена.</p>
+    <p>Стили форм, полей для ввода данных, уведомлений и других компонентов можете подобрать на свое усмотрение.</p>
     </div>
     <div class="site-nav">
     <div class="site-nav-scroll">
