--- a/labs/lab06/index.html
+++ b/labs/lab06/index.html
@@ -57,21 +57,21 @@
             <p>Компонент <mark>StudentInfo</mark> должен содержать следующие поля:</p>
             <ul>
                 <li>ФИО студента;</li>
-                <li>Дата рождения;</li>
-                <li>Год поступления в университет;</li>
-                <li>Факультет;</li>
-                <li>Группа;</li>
-                <li>Специальность;</li>
-                <li>Электронная почта (e-mail);</li>
-                <li>Номер телефона.</li>
+                <li>дата рождения;</li>
+                <li>год поступления в университет;</li>
+                <li>факультет;</li>
+                <li>группа;</li>
+                <li>специальность;</li>
+                <li>электронная почта;</li>
+                <li>номер телефона.</li>
             </ul>
             <p>Создайте компонент <mark>StudentInfoHandler</mark> для обработки и вывода полученной в компоненте <mark>StudentInfo</mark> информации. В ходе обработки информации получите следующие дополнительные данные:</p>
             <ul>
-                <li>Текущий возраст студента;</li>
-                <li>Курс студента (выводить "Окончил университет" при значении большем четырех);</li>
-                <li>Оператор услуг электронной почты;</li>
-                <p>Пример: для info@mail.ru оператором является mail.ru</p>
-                <li>Оператор услуг мобильной связи.</li>
+                <li>текущий возраст студента;</li>
+                <li>курс студента (выводить "Окончил университет" при значении большем четырех);</li>
+                <li>оператор услуг электронной почты;</li>
+                <p>пример: для info@mail.ru оператором является mail.ru</p>
+                <li>оператор услуг мобильной связи.</li>
             </ul>
             <p>Для определения оператора воспользуйтесь данными таблицы ниже.</p>
             <table>
@@ -449,14 +449,14 @@
                     </td>
                 </tr>
             </table>
-            <p>Продемонстрировать работу компонента <mark>StudentInfoHandler</mark> на странице после ввода данных и во внешнем окне.</p>
+            <p>Продемонстрируйте работу компонента <mark>StudentInfoHandler</mark> на странице после ввода данных и во внешнем окне.</p>
             <p class="section">Задание 2</p>
-            <p>Разработайте компонент <mark>Notes</mark> для создания заметок. Компонент <mark>Notes</mark> должен содержать поля для ввода <span class="gatsby-code-text">заголовка заметки</span>, <span class="gatsby-code-text">даты заметки</span>, <span class="gatsby-code-text">текстовую область</span> для ввода текста заметки и <span class="gatsby-code-text">кнопку "Добавить заметку"</span>. После нажатия на кнопку, ниже полей ввода, должна появится заметка следующего вида:</p>
+            <p>Разработайте компонент <mark>Notes</mark> для создания заметок. Компонент <mark>Notes</mark> должен содержать поля для ввода <span class="gatsby-code-text">заголовка заметки</span>, <span class="gatsby-code-text">даты заметки</span>, <span class="gatsby-code-text">текстовую область</span> для ввода текста заметки и <span class="gatsby-code-text">кнопку «Добавить заметку»</span>. После нажатия на кнопку ниже полей ввода должна появится заметка следующего вида:</p>
             <p>Заголовок заметки<br>Дата заметки<br>Текст заметки</p>
             <p>При этом поля формы должны быть очищены.</p>
-            <p>Для компонента <mark>Notes</mark> реализовать следующий функционал: добавления неопределенного количества заметок, появление кнопок "Удалить первую заметку" и "Удалить последнюю заметку" при количестве заметок большем трех.</p>
-            <p><span class="gatsby-code-text">Цвет фона всех заметок должен быть желтым.</span> Начиная с восьмой заметки выдавать сообщение "У вас слишком много заметок" над заголовком заметки и изменить цвет фона следующих заметок на красный.</p>
-            <p>Стили для формы добавления заметок, как и для самих заметок можете подобрать индивидуально. Соблюдать условие изменения цвета начиная с восьмой заметки.</p>
+            <p>Для компонента <mark>Notes</mark> реализовать следующий функционал: добавления неопределенного количества заметок, появление кнопок «Удалить первую заметку» и «Удалить последнюю заметку» при количестве заметок большем трех.</p>
+            <p><span class="gatsby-code-text">Цвет фона всех заметок должен быть желтым.</span> Начиная с восьмой заметки выдавать сообщение «У вас слишком много заметок» над заголовком заметки и изменить цвет фона следующих заметок на красный.</p>
+            <p>Стили для формы добавления заметок, как и для самих заметок подберите индивидуально.</p>
         </div>
         <div class="site-nav">
             <div class="site-nav-scroll">
