--- a/labs/lab07/index.html
+++ b/labs/lab07/index.html
@@ -52,18 +52,18 @@
         <div class="content">
             <p class="section">Лабораторная работа №7</p>
             <p class="lr-theme">Темы: <a target="_blank" href="../../examples/advanced/higher-order-comp/index.html">Компоненты более высокого порядка</a></p>
+            <p>Для выполнения этой лабораторной работы вам понадобятся компоненты <mark>Calendar</mark> и <mark>Notes</mark>, разработанные в лабораторных работах №3 и №6.</p>
             <p class="section">Задание 1</p>
-            <p>Для выполнения данной лабораторной работы вам понадобятся компоненты <mark>Calendar</mark> и <mark>Notes</mark> разработанные в предыдущих лабораторных работах.</p>
-            <p>На основании компонентов <mark>Calendar</mark> и <mark>Notes</mark> разработайте компонент <mark>Scheduler</mark> "Планировщик задач".</p>
-            <p>Планировщик должен работать следующим образом: при клике на определенный день, он меняет цвет фона (показывает выделение), при повторном клике на выделенный день — ниже календаря появляется компонент заметок <mark>Notes</mark> с функциональным меню для выбора действий. Необходимо реализовать следующие действия:</p>
+            <p>На основании компонентов <mark>Calendar</mark> и <mark>Notes</mark> разработайте компонент <mark>Scheduler</mark> «Планировщик задач».</p>
+            <p>Планировщик должен работать следующим образом: при клике на определенный день он меняет цвет фона (показывает выделение), при повторном клике на выделенный день ниже календаря появляется компонент заметок <mark>Notes</mark> с функциональным меню для выбора действий. Реализуйте следующие действия:</p>
             <ul>
-                <li>Добавление записей;</li>
-                <li>Изменение существующих записей;</li>
-                <li>Удаление существующих записей;</li>
-                <li>Удаление всех записей.</li>
+                <li>добавление записей;</li>
+                <li>изменение существующих записей;</li>
+                <li>удаление существующих записей;</li>
+                <li>удаление всех записей.</li>
             </ul>
             <p>После добавления записи цвет фона изменяется для отображения выделения. При удалении всех записей день изменяет цвет фона на стандартный.</p>
-            <p><strong>Функцией высшего порядка (управляющей/главной) должен является Календарь.</strong></p>
+            <p>Компонентом высшего порядка (управляющим/главным) должен являться <mark>Calendar</mark>.</p>
         </div>
         <div class="site-nav">
             <div class="site-nav-scroll">
