--- a/labs/lab05/index.html
+++ b/labs/lab05/index.html
@@ -49,6 +49,7 @@
     <div class="content">
         <p class="section">Лабораторная работа №5</p>
         <p class="lr-theme">Темы: <a target="_blank" href="../../examples/quick-start/forms/index.html">Формы</a></p>
+        <p>Для выполнения этой лабораторной работы вам понадобится компонент <mark>PhoneInput</mark>, разработаннй в лабораторной работе №3.</p>
         <p class="section">Задание 1</p>
         <p>Создайте компонент <mark>SignUpForm</mark>, позволяющий ввести данные для регистрации пользователя на сайте. В форме должна быть возможность указать:</p>
         <ul>
@@ -57,7 +58,7 @@
             <li>Фамилию, имя, отчество в простых текстовых полях.</li>
             <li>Пол при помощи радиокнопок.</li>
             <li>Дату рождения при помощи выпадающих списков.</li>
-            <li>Номер телефона при помощи компонента <mark>PhoneInput</mark>, разработанного в лабораторной работе №3.</li>
+            <li>Номер телефона при помощи компонента <mark>PhoneInput</mark>.</li>
         </ul>
     </div>
 <div class="site-nav">
