--- a/labs/lab09/index.html
+++ b/labs/lab09/index.html
@@ -2,21 +2,22 @@
 <html lang="en">
 
 <head>
+
     <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ЛАБОРАТОРНЫЕ РАБОТЫ &#124; REACT.JS</title>
-    <link rel="shortcut icon" type="image/x-icon" href="../../favicon.ico">
-    <link rel="stylesheet" href="../../css/general.css">
-    <!--React.js-->
-    <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-    <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>ЛАБОРАТОРНЫЕ РАБОТЫ &#124; REACT.JS</title>
+        <link rel="shortcut icon" type="image/x-icon" href="../../favicon.ico">
+        <link rel="stylesheet" href="../../css/general.css">
+        <!--React.js-->
+        <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
+        <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+        <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
         <script src="../../libraries/prism.js"></script>
-    <!--jQuery-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="../../libraries/header.js"></script>
-</head>
+        <!--jQuery-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <script src="../../libraries/header.js"></script>
+    </head>
 </head>
 
 <body>
@@ -48,62 +49,82 @@
 
     <div class="general">
 
-    <div class="content">
-    <p class="section">Лабораторная работа №9</p>
+        <div class="content">
+            <p class="section">Лабораторная работа №9</p>
+            <p class="lr-theme">Темы: <a target="_blank" href="../../examples/advanced/optimizing-perfomance/index.html">Оптимизация производительности</a>, <a target="_blank" href="../../examples/advanced/reconciliation/index.html">Согласование</a>, <a target="_blank" href="../../examples/advanced/forwarding-refs/index.html">Пересылки</a></p>
+            <p class="section">Задание 1</p>
+            <p>Для выполнения этой лабораторной работы вам понадобятся компонент <mark>SortTable</mark>, разработанный в лабораторной работе №3.</p>
+            <p>Продолжите разработку компонента <mark>SortTable</mark>. Компонент должен содержать следующие обязательные поля:</p>
+            <ul>
+                <li>Наименование (Название);</li>
+                <li>Стоимость;</li>
+                <li>Количество;</li>
+                <li>Изображение;</li>
+                <li>Описание;</li>
+                <li>Новинка (значение Да/Нет);</li>
+                <li>Скидка (значение в процентах).</li>
+            </ul>
+            <p>В пункте "Изображение" выводите миниатюру изображения, а не его полную версию. Реализовать возможность сортировки по наименованию, стоимости, количеству, скидке.</p>
+            <p>Разработайте компонент товара <mark>Сatalog</mark> для отображения элементов из списка <mark>SortTable</mark> в виде каталога интернет-магазина. Компонент должен выводить всю информацию о каждом товаре из компонента <mark>SortTable</mark>. Реализовать возможность сортировки по тем же критериям, что и в компоненте <mark>SortTable</mark> (наименованию, стоимости, количеству, скидке).</p>
+            <p>При наличии скидки на товар выводить стоимость со скидкой и его полную стоимость. Если товар является новинкой, выводить информацию об этом в компоненте. Так же товары-новинки не зависимо от типа сортировки должны быть отображены первыми.</p>
+            <p>Пример реализации компонента <mark>Сatalog</mark>:</p>
+            <img src="demo1.jpg" alt="Пример 1">
+            <img src="demo2.jpg" alt="Пример 2">
+            <img src="demo3.jpg" alt="Пример 3">
+        </div>
+        <div class="site-nav">
+            <div class="site-nav-scroll">
+                <ul class="site-nav-list">
+                    <p class="site-nav-name">Раздел 1. Установка и введение в React</p>
+                    <li><a href="../lab01/index.html">Лабораторная работа №1</a></li>
+                    <li><a href="../lab02/index.html">Лабораторная работа №2</a></li>
+                    <li><a href="../lab03/index.html">Лабораторная работа №3</a></li>
+                    <li><a href="../lab04/index.html">Лабораторная работа №4</a></li>
+                    <li><a href="../lab05/index.html">Лабораторная работа №5</a></li>
+                    <p class="site-nav-name">Раздел 2. Основы React</p>
+                    <li><a href="../lab06/index.html">Лабораторная работа №6</a></li>
+                    <li><a href="../lab07/index.html">Лабораторная работа №7</a></li>
+                    <li><a href="../lab08/index.html">Лабораторная работа №8</a></li>
+                    <li><a href="index.html">Лабораторная работа №9</a></li>
+                    <li><a href="../lab10/index.html">Лабораторная работа №10</a></li>
+                    <p class="site-nav-name">Раздел 3. Redux.js</p>
+                    <li><a href="../lab11/index.html">Лабораторная работа №11</a></li>
+                    <li><a href="../lab12/index.html">Лабораторная работа №12</a></li>
+                    <li><a href="../lab13/index.html">Лабораторная работа №13</a></li>
+                    <li><a href="../lab14/index.html">Лабораторная работа №14</a></li>
+                    <li><a href="../lab15/index.html">Лабораторная работа №15</a></li>
+                    <li><a href="../lab16/index.html">Лабораторная работа №16</a></li>
+                    <li><a href="../lab17/index.html">Лабораторная работа №17</a></li>
+                </ul>
+                <script type="text/babel" src="../../libraries/navigator.js"></script>
+                <script>
+                    $(document).ready(function() {
+                        $('.site-nav-list a[href="index.html"]').parent().toggleClass('site-nav-list-active');
+                    });
 
-    </div>
-    <div class="site-nav">
-    <div class="site-nav-scroll">
-        <ul class="site-nav-list">
-            <p class="site-nav-name">Раздел 1. Установка и введение в React</p>
-            <li><a href="../lab01/index.html">Лабораторная работа №1</a></li>
-            <li><a href="../lab02/index.html">Лабораторная работа №2</a></li>
-            <li><a href="../lab03/index.html">Лабораторная работа №3</a></li>
-            <li><a href="../lab04/index.html">Лабораторная работа №4</a></li>
-            <li><a href="../lab05/index.html">Лабораторная работа №5</a></li>
-            <p class="site-nav-name">Раздел 2. Основы React</p>
-            <li><a href="../lab06/index.html">Лабораторная работа №6</a></li>
-            <li><a href="../lab07/index.html">Лабораторная работа №7</a></li>
-            <li><a href="../lab08/index.html">Лабораторная работа №8</a></li>
-            <li><a href="index.html">Лабораторная работа №9</a></li>
-            <li><a href="../lab10/index.html">Лабораторная работа №10</a></li>
-            <p class="site-nav-name">Раздел 3. Redux.js</p>
-            <li><a href="../lab11/index.html">Лабораторная работа №11</a></li>
-            <li><a href="../lab12/index.html">Лабораторная работа №12</a></li>
-            <li><a href="../lab13/index.html">Лабораторная работа №13</a></li>
-            <li><a href="../lab14/index.html">Лабораторная работа №14</a></li>
-            <li><a href="../lab15/index.html">Лабораторная работа №15</a></li>
-            <li><a href="../lab16/index.html">Лабораторная работа №16</a></li>
-            <li><a href="../lab17/index.html">Лабораторная работа №17</a></li>
-        </ul>
-        <script type="text/babel" src="../../libraries/navigator.js"></script>
-        <script>
-            $(document).ready(function() {
-                $('.site-nav-list a[href="index.html"]').parent().toggleClass('site-nav-list-active');
-            });
-            function handleResize() {
-                if ($(document.body).width() < 799) {
-                    $('.site-nav-scroll')
-                    .css('height', $('.site-nav-list').height() + 40)
-                    .css('overflow-y', 'hidden');
-                } else {
-                    $('.site-nav-scroll').css('height', '');
-                    $('.site-nav-scroll').height($('.content').height());
-                    if ($('.site-nav-list').outerHeight() > $('.site-nav-scroll').innerHeight()) {
-                        $('.site-nav-scroll').css('overflow-y', 'scroll');
-                    } else {
-                        $('.site-nav-scroll').css('overflow-y', 'hidden');
+                    function handleResize() {
+                        if ($(document.body).width() < 799) {
+                            $('.site-nav-scroll')
+                                .css('height', $('.site-nav-list').height() + 40)
+                                .css('overflow-y', 'hidden');
+                        } else {
+                            $('.site-nav-scroll').css('height', '');
+                            $('.site-nav-scroll').height($('.content').height());
+                            if ($('.site-nav-list').outerHeight() > $('.site-nav-scroll').innerHeight()) {
+                                $('.site-nav-scroll').css('overflow-y', 'scroll');
+                            } else {
+                                $('.site-nav-scroll').css('overflow-y', 'hidden');
+                            }
+                        }
                     }
-                }
-            }
-            $(function() {
-                document.body.onresize = handleResize;
-                handleResize();
-            });
-        </script>
+                    $(function() {
+                        document.body.onresize = handleResize;
+                        handleResize();
+                    });
+                </script>
+            </div>
+        </div>
     </div>
-    </div>
-</div>
 
 </body>
 
