--- a/labs/lab10/index.html
+++ b/labs/lab10/index.html
@@ -50,7 +50,21 @@
 
     <div class="content">
     <p class="section">Лабораторная работа №10</p>
-
+    <p class="lr-theme">Темы: <a target="_blank" href="../../examples/advanced/typechecking-with-proptypes/index.html">Проверка типов с помощью PropTypes </a>, <a target="_blank" href="../../examples/advanced/integrating-with-lib/index.html">Интеграция со сторонними библиотеками</a></p>
+    <p class="section">Задание 1</p>
+    <p>Изучить и научиться использовать поддерживаемые в React.js валидаторы с различными типами данных.</p>
+    <p>Продемонстрируйте использование следующих валидаторов:</p>
+    <ul>
+        <li>optionalArray: React.PropTypes.array</li>
+        <li>optionalBool: React.PropTypes.bool</li>
+        <li>optionalFunc: React.PropTypes.func</li>
+        <li>optionalNumber: React.PropTypes.number</li>
+        <li>optionalObject: React.PropTypes.object</li>
+        <li>optionalString: React.PropTypes.string</li>
+        <li> optionalSymbol: React.PropTypes.symbol</li>
+    </ul>
+    <p>Использовать компонент <mark>SignUpForm</mark>, разработанный в лабораторной работе №5. Применить <span class="gatsby-code-text">PropTypes</span> для всех пунктов, для которых возможна проверка типов. Предварительно подобрать нужный тип валидатора.</p>
+    <p>Например : фамилию, имя, отчество можно проверить с помощью React.PropTypes.string.</p>
     </div>
     <div class="site-nav">
     <div class="site-nav-scroll">
